--- a/addlisting/addl.css
+++ b/addlisting/addl.css
@@ -5,6 +5,7 @@
     font-family: 'Inter';
     box-sizing: border-box;
     text-decoration: none;
+    outline: none;
 }
 header { 
     display: flex;
